samples/_failures_safe/1761711890_22b4a0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_89dedc95.c: In function ‘main’:
./samples/SAFE/__tmp_89dedc95.c:168:5: error: expected expression at end of input
  168 |     if (multiply_matrices(&mat1,
      |     ^~
./samples/SAFE/__tmp_89dedc95.c:168:9: error: too few arguments to function ‘multiply_matrices’
  168 |     if (multiply_matrices(&mat1,
      |         ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_89dedc95.c:75:5: note: declared here
   75 | int multiply_matrices(const Matrix *a, const Matrix *b, Matrix *result) {
      |     ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_89dedc95.c:168:5: error: expected declaration or statement at end of input
  168 |     if (multiply_matrices(&mat1,
      |     ^~
